--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# --- Project-Specific Ignores ---
+# Ignore the large dataset folder
+food-101/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
